143-wallet: Mobile phone recharge page adjustment
Ticket: LEUI-9412

Solution:
调整联系人名称/运营商显示到手机号的下方
更改充值商品的Item的布局:调整商品信息的字体大小，调整每个商品Item之间的间距
话费充值页面添加流量充值入口:判断页面为话费充值时显示流量充值入口
流量充值商品上方文字从服务器获取数据显示:默认先显示本地文字，判断页面为流量充值页面时
请求网络数据并显示

Change-Id: Id5793fb66a6c80b6c7f20ab703d4d614783863d2
Signed-off-by: changjiajie <changjiajie@le.com>

--- a/LetvWallet/res/drawable/mobile_product_bg.xml
+++ b/LetvWallet/res/drawable/mobile_product_bg.xml
@@ -2,23 +2,31 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_focused="true">
         <shape android:shape="rectangle">
-            <gradient android:angle="270.0" android:endColor="@color/colorMobilePrimary" android:startColor="@color/colorMobilePrimary" />
+            <corners android:radius="@dimen/mobile_products_panel_corners_radius" />
+            <solid android:color="@color/colorMobilePrimary" />
+            <stroke android:color="@color/colorMobilePrimary" android:width="@dimen/mobile_products_panel_stroke_width" />
         </shape>
     </item>
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <gradient android:angle="270.0" android:endColor="@color/colorMobilePrimary" android:startColor="@color/colorMobilePrimary" />
+            <corners android:radius="@dimen/mobile_products_panel_corners_radius" />
+            <solid android:color="@color/colorMobilePrimary" />
+            <stroke android:color="@color/colorMobilePrimary" android:width="@dimen/mobile_products_panel_stroke_width" />
         </shape>
     </item>
 
     <item android:state_enabled="false">
         <shape android:shape="rectangle">
-            <gradient android:angle="270.0" android:endColor="@android:color/transparent" android:startColor="@android:color/transparent" />
+            <corners android:radius="@dimen/mobile_products_panel_corners_radius" />
+            <solid android:color="@android:color/transparent" />
+            <stroke android:color="@color/mobile_product_tv_color" android:width="@dimen/mobile_products_panel_stroke_width" />
         </shape>
     </item>
     <item>
         <shape android:shape="rectangle">
-            <gradient android:angle="270.0" android:endColor="@android:color/transparent" android:startColor="@android:color/transparent" />
+            <corners android:radius="@dimen/mobile_products_panel_corners_radius" />
+            <solid android:color="@android:color/transparent" />
+            <stroke android:color="@color/colorMobilePrimary" android:width="@dimen/mobile_products_panel_stroke_width" />
         </shape>
     </item>
 </selector>
