--- a/LetvWallet/res/layout/mobile_history_phonenum_item.xml
+++ b/LetvWallet/res/layout/mobile_history_phonenum_item.xml
@@ -2,32 +2,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/mobile_history_record_itemv"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:layout_marginLeft="@dimen/mobile_historynumber_margin"
-    android:layout_marginRight="@dimen/margin_default">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:paddingBottom="@dimen/mobile_historynumber_margin"
+    android:paddingTop="@dimen/mobile_historynumber_margin">
 
     <TextView
         android:id="@+id/history_phone"
         style="@style/MobileHistoryMobileNumber"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:gravity="left" />
+
+    <TextView
+        android:id="@+id/history_phone_name"
+        style="@style/MobileHistoryContactName"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_weight="1"
-        android:gravity="left" />
-
-    <RelativeLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1">
-
-        <TextView
-            android:id="@+id/history_phone_name"
-            style="@style/MobileHistoryContactName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:maxEms="7"
-            android:ellipsize="end"
-            android:layout_centerInParent="true" />
-    </RelativeLayout>
+        android:ellipsize="end"
+        android:gravity="right"
+        android:maxLines="1"
+        android:paddingLeft="@dimen/mobile_historynumber_margin" />
 </LinearLayout>
