--- a/LetvWallet/res/values-zh-rCN/string_mobile.xml
+++ b/LetvWallet/res/values-zh-rCN/string_mobile.xml
@@ -2,14 +2,15 @@
 <resources>
     <string name="menu_record">记录</string>
     <string name="label_price_unit">元</string>
-    <string name="label_mobile_number">手机号码（ %s ）</string>
-    <string name="label_mobile_number_def_desc"> 联通\\电信\\移动</string>
     <string name="label_mobile_deposite">充值金额</string>
     <string name="label_mobile_flow_deposite">充值额度</string>
-    <string name="label_mobile_product_price">售价:</string>
+    <string name="label_mobile_flow_entrance_deposite">流量充值</string>
+    <string name="label_mobile_product_price">售价：</string>
     <string name="label_mobile_product_unit_fee">元</string>
     <string name="label_mobile_product_unit_flow">MB</string>
     <string name="label_mobile_product_unit_g_flow">G</string>
+
+    <string name="mobile_flow_entrance_content">选流量包</string>
     <!-- mobile order -->
     <string name="mobile_order_list_label">充值记录</string>
     <string name="mobile_order_desc_label_prodcut">充值：</string>
