--- a/LetvWallet/res/values/string_mobile.xml
+++ b/LetvWallet/res/values/string_mobile.xml
@@ -2,14 +2,16 @@
 <resources>
     <string name="menu_record">Record</string>
     <string name="label_price_unit">RMB</string>
-    <string name="label_mobile_number">Mobile number (%s)</string>
-    <string name="label_mobile_number_def_desc"> China Unicom\\China Telecom\\China Mobile</string>
+    <string name="label_mobile_def_desc" translatable="false">(%s)</string>
     <string name="label_mobile_deposite">Top-up amount</string>
     <string name="label_mobile_flow_deposite">Top-up limit</string>
-    <string name="label_mobile_product_price">Price:</string>
+    <string name="label_mobile_flow_entrance_deposite">Flow recharge</string>
+    <string name="label_mobile_product_price">Price: </string>
     <string name="label_mobile_product_unit_fee">RMB</string>
     <string name="label_mobile_product_unit_flow">MB</string>
     <string name="label_mobile_product_unit_g_flow">G</string>
+
+    <string name="mobile_flow_entrance_content">Selection item</string>
     <!-- mobile order -->
     <string name="mobile_order_list_label">Top-up history</string>
     <string name="mobile_order_desc_label_prodcut">Top-up:</string>
