143-wallet: 服务端无banner数据时，隐藏会员购买页的banner
Ticket: CONNECT-15674

Signed-off-by: Zhang Huancheng <zhanghuancheng@le.com>

Change-Id: Ic6f24c0e0ba4f9458ae3bc6ce0107a93b1f00384

--- a/LetvWallet/res/layout/member_banner_layout.xml
+++ b/LetvWallet/res/layout/member_banner_layout.xml
@@ -2,8 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
 >
     <FrameLayout
+        android:id="@+id/banner_frame_layout"
         android:layout_width="match_parent"
         android:layout_height="100dip">
         <com.letv.walletbiz.main.AutoSlideViewpager
@@ -22,5 +24,6 @@
     </FrameLayout>
     <View
         style="@style/Divider_HorizontalLine_Style"
+        android:visibility="invisible"
     />
 </LinearLayout>
