--- a/LetvWalletCommon/res/layout/labeled_text_item.xml
+++ b/LetvWalletCommon/res/layout/labeled_text_item.xml
@@ -31,6 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|right"
             android:layout_weight="1"
+            android:layout_marginStart="10dp"
             android:gravity="right">
 
             <LinearLayout
