--- a/LetvWallet/res/layout/movie_cinema_schedule_gallery_item.xml
+++ b/LetvWallet/res/layout/movie_cinema_schedule_gallery_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.letv.walletbiz.movie.ui.MovieGalleryImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/movie_poster"
     android:layout_width="129dip"
     android:layout_height="190dip"
