--- a/LetvWallet/res/layout/member_order_confirm_layout.xml
+++ b/LetvWallet/res/layout/member_order_confirm_layout.xml
@@ -145,12 +145,17 @@
         </LinearLayout>
     </ScrollView>
 
-    <TextView
-        android:id="@+id/ibtn_action"
-        style="@style/PayButton.SectionBase.Bottom"
+    <LinearLayout
+        android:id="@+id/btn_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="@dimen/pay_button_tv_font_size"
-        android:textStyle="normal" />
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/ibtn_action"
+            style="@style/PayButton.SectionBase.Bottom"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="@dimen/pay_button_tv_font_size"
+            android:textStyle="normal" />
+    </LinearLayout>
 </LinearLayout>
