--- a/LetvWallet/res/values-zh-rCN/string_member.xml
+++ b/LetvWallet/res/values-zh-rCN/string_member.xml
@@ -29,4 +29,5 @@
 
     <string name="member_order_desc_label_sn">订单编号：</string>
     <string name="member_order_list_label">订单记录</string>
+    <string name="member_prompt_not_agree_agreement">请勾选购买协议</string>
 </resources>
