--- a/LetvWallet/res/values/string_member.xml
+++ b/LetvWallet/res/values/string_member.xml
@@ -28,5 +28,6 @@
 
     <string name="member_order_desc_label_sn">Order Number:</string>
     <string name="member_order_list_label">Order history</string>
+    <string name="member_prompt_not_agree_agreement">Please agree the agreement</string>
 
 </resources>
