143-wallet: 会员购买界面过度绘制问题
原因：多次设置控件的background属性导致

方案：减少控件background属性设置

Ticket: LEUIAPP-19

Signed-off-by: Zhang Huancheng <zhanghuancheng@le.com>

Change-Id: I6354be18cb4924866b8e217779771ca6555703b9

--- a/LetvWallet/res/values/theme.xml
+++ b/LetvWallet/res/values/theme.xml
@@ -11,6 +11,7 @@
     <!-- Member -->
     <style name="MemberTheme" parent="AppTheme.Arrow">
         <item name="walletPrimaryColor">@color/colorMemberPrimary</item>
+        <item name="android:windowBackground">@color/member_color_content_bg</item>
     </style>
 
     <!-- Movie -->
