--- a/LetvWallet/res/layout/member_available_scope_layout.xml
+++ b/LetvWallet/res/layout/member_available_scope_layout.xml
@@ -3,11 +3,10 @@
     android:id="@+id/available_scope_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="@color/white">
+    android:orientation="vertical">
     <TextView
         android:id="@+id/available_scope_tv"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="14sp"
         android:singleLine="true"
@@ -16,6 +15,7 @@
         android:paddingRight="16dip"
         android:paddingBottom="12dip"
         android:text="@string/available_scope"
+        android:background="@color/white"
         />
 
     <ImageView
