--- a/LetvWallet/res/layout/member_fragment_layout.xml
+++ b/LetvWallet/res/layout/member_fragment_layout.xml
@@ -1,27 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<com.letv.walletbiz.member.widget.BannerPtrFrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:cube_ptr="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/refresh_header_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <com.letv.walletbiz.member.widget.BannerPtrFrameLayout
-        android:id="@+id/refresh_header_view"
-        xmlns:cube_ptr="http://schemas.android.com/apk/res-auto"
+    android:layout_height="match_parent"
+    cube_ptr:ptr_duration_to_close="200"
+    cube_ptr:ptr_duration_to_close_header="1000"
+    cube_ptr:ptr_keep_header_when_refresh="true"
+    cube_ptr:ptr_pull_to_fresh="false"
+    cube_ptr:ptr_ratio_of_header_height_to_refresh="1.2"
+    cube_ptr:ptr_resistance="1.7">
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/colorWhite"
-        cube_ptr:ptr_duration_to_close="200"
-        cube_ptr:ptr_duration_to_close_header="1000"
-        cube_ptr:ptr_keep_header_when_refresh="true"
-        cube_ptr:ptr_pull_to_fresh="false"
-        cube_ptr:ptr_ratio_of_header_height_to_refresh="1.2"
-        cube_ptr:ptr_resistance="1.7">
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/member_color_content_bg"
-        />
-    </com.letv.walletbiz.member.widget.BannerPtrFrameLayout>
-
-</LinearLayout>
+        android:layout_height="wrap_content"
+    />
+</com.letv.walletbiz.member.widget.BannerPtrFrameLayout>
