143-wallet: Member: 大视图大字体，乐视会员首页和订单列表页显示异常
原因：没有将textView设置为单行，TabLayout字数多时显示超出屏幕

方案：将相关TextView设置为单行，与鹤晨沟通后可以将TabLayout字体设为固定大小

Ticket: LEUIAPP-35

Signed-off-by: Zhang Huancheng <zhanghuancheng@le.com>

Change-Id: I1ec7560d1cfb6b9368a7648b0bc896f378563801

--- a/LetvWallet/res/layout/member_orderlist_item_v.xml
+++ b/LetvWallet/res/layout/member_orderlist_item_v.xml
@@ -43,6 +43,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tv_order_sn"
+                android:singleLine="true"
                 android:textSize="14sp"
                 android:textColor="@color/member_color_sub_text"
                 android:fontFamily="SourceHanSansSC-Regular" />
