--- a/LetvWallet/res/layout/member_agreement_layout.xml
+++ b/LetvWallet/res/layout/member_agreement_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/agreement"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -8,12 +8,12 @@
     android:background="@color/white">
     <TextView
         android:id="@+id/membership_agreement"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:textSize="16sp"
         android:textColor="@color/member_color_text"
         android:singleLine="true"
-        android:layout_alignParentTop="true"
         android:paddingLeft="16dip"
         android:paddingRight="16dip"
         android:text="@string/agreement"
@@ -26,10 +26,7 @@
         android:textSize="14sp"
         android:textColor="@color/member_color_sub_text"
         android:maxLines="1"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignBaseline="@id/membership_agreement"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:fontFamily="SourceHanSansSC-Regular"/>
-</RelativeLayout>
+</LinearLayout>
