--- a/LetvWallet/res/layout/member_product_item_layout.xml
+++ b/LetvWallet/res/layout/member_product_item_layout.xml
@@ -58,6 +58,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="6dp"
                 android:textSize="14sp"
+                android:singleLine="true"
                 android:textColor="@color/member_color_sub_text"
                 android:text="@string/month_price"
                 android:fontFamily="Roboto-Medium"/>
