--- a/LetvWallet/res/values-zh-rCN/string_member.xml
+++ b/LetvWallet/res/values-zh-rCN/string_member.xml
@@ -10,7 +10,7 @@
     <string name="label_member_duration">会员时长</string>
     <string name="label_member_description">会员描述</string>
     <string name="label_member_detail">详情说明</string>
-    <string name="label_agreement"> 协议</string>
+    <string name="label_agreement">协议</string>
 
     <string name="member_order_desc_label_name">商品名称: </string>
     <string name="member_order_desc_label_duration">会员时长: </string>
@@ -30,4 +30,11 @@
     <string name="member_order_desc_label_sn">订单编号：</string>
     <string name="member_order_list_label">订单记录</string>
     <string name="member_prompt_not_agree_agreement">请勾选购买协议</string>
+
+    <string name="member_order_status_to_pay">待支付</string>
+    <string name="member_order_status_paid">支付完成</string>
+    <string name="member_order_refund_success">退款成功</string>
+    <string name="member_order_status_cancelled">已取消</string>
+    <string name="member_order_refunding">退款中</string>
+    <string name="member_order_success">交易成功</string>
 </resources>
