--- a/LetvWallet/res/values/string_member.xml
+++ b/LetvWallet/res/values/string_member.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="member_tool_bar">Le Member</string>
-    <string name="total_price">%1$s Yuan</string>
-    <string name="month_price">%1$s Yuan/Month</string>
+    <string name="total_price">%1$s RMB</string>
+    <string name="month_price">%1$s RMB/Month</string>
     <string name="purchase">Purchase</string>
     <string name="agreement">Member agreement</string>
     <string name="available_scope">Available scope</string>
@@ -10,13 +10,14 @@
     <string name="label_member_duration">Member duration</string>
     <string name="label_member_description">Member description</string>
     <string name="label_member_detail">Member detail</string>
-    <string name="label_agreement"> agreement</string>
+    <string name="label_agreement">" Agreement"</string>
 
+    <string name="member_order_desc_label_name">Product Name: </string>
     <string name="member_order_desc_label_duration">Member duration: </string>
     <string name="member_order_desc_label_description">Member description: </string>
     <string name="agreement_detail">Agreement Detail</string>
 
-    <string name="member_month_count"> Months</string>
+    <string name="member_month_count">" Months"</string>
     <string name="member_agree_agreement">Agree &lt;%1$s agreement&gt;</string>
     <string name="member_prompt_net_connection_fail">Network connection failed</string>
     <string name="member_prompt_user_select_load_title">Network error. Please reload.</string>
@@ -26,8 +27,15 @@
     <string name="member_product_season">season</string>
     <string name="member_product_year">year</string>
 
-    <string name="member_order_desc_label_sn">Order Number:</string>
+    <string name="member_order_desc_label_sn">"Order Number: "</string>
     <string name="member_order_list_label">Order history</string>
     <string name="member_prompt_not_agree_agreement">Please agree the agreement</string>
+
+    <string name="member_order_status_to_pay">To Pay</string>
+    <string name="member_order_status_paid">Paid</string>
+    <string name="member_order_refund_success">Refund success</string>
+    <string name="member_order_status_cancelled">Canceled</string>
+    <string name="member_order_refunding">Refunding</string>
+    <string name="member_order_success">Success</string>
 
 </resources>
