143-wallet: update: 钱包升级版本号显示格式不正确
Ticket: LEUIAPP-42

Root cause: 需求变更

Solution: 按照需求修改

Signed-off-by: Zhang Huancheng <zhanghuancheng@le.com>

Change-Id: I81b184d1c49d4ed5204243180149885e78d22959

--- a/LetvWallet/res/values-zh-rCN/string_upgrade.xml
+++ b/LetvWallet/res/values-zh-rCN/string_upgrade.xml
@@ -11,7 +11,7 @@
 
     <string name="update_content">说明: %s</string>
     <string name="defautl_update_content">优化部分流程及修复已知问题</string>
-    <string name="update_version">版本: v%s</string>
+    <string name="update_version">版本: %s</string>
     <string name="downloaded">已下载</string>
     <string name="undownloaded">未下载</string>
     <string name="upgrade_fail">升级失败</string>
