--- a/LetvWalletCommon/res/values/theme.xml
+++ b/LetvWalletCommon/res/values/theme.xml
@@ -6,7 +6,7 @@
         <item name="android:statusBarColor">@color/wallet_statusbar_color</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <!--<item name="*android:leStatusBarIconColor">@color/wallet_leStatusBarIconColor_color</item>-->
-        <item name="android:windowLightStatusBar">true</item>
+        <item name="android:windowLightStatusBar">false</item>
 
         <item name="android:windowContentOverlay">@null</item>
         <item name="actionBarSize">40dp</item>
