143-wallet: resolve anr for MainActivity
RootCause: ViewPager中的populate和calculatePageOffsets两个方式for循环次数同getCount成正比，getcount数值过大导致

Solution: 更新自动循环逻辑，使getcount保持在banner数量×2+1的数量，保持显示的position始终保持在banner数量+1到banner数量*2这个区间内

Ticket: LEUIAPP-323

Change-Id: I0b57722a2714e95c4c1d10b69824d4188574ad00
Signed-off-by: liuliang6 <liuliang6@le.com>

--- a/LetvWallet/res/layout/mobile_activity_main.xml
+++ b/LetvWallet/res/layout/mobile_activity_main.xml
@@ -9,13 +9,13 @@
         android:id="@+id/banner_ll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <com.letv.walletbiz.mobile.ui.BannerV
             android:id="@+id/mobile_banner_id"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="gone" />
+            android:layout_height="wrap_content" />
 
         <View
             android:layout_width="match_parent"
