143-wallet: add recommend page
RootCause：无

Solution：增加优惠券卡片，通用卡片，电影票卡片

Ticket: LEUIAPP-266 LEUIAPP-267 LEUIAPP-268

Change-Id: I444d7b6a8dd9595504df7e9919fd2520185e23a3
Signed-off-by: liuliang6 <liuliang6@le.com>

--- a/LetvWalletCommon/res/values/styles.xml
+++ b/LetvWalletCommon/res/values/styles.xml
@@ -61,15 +61,15 @@
     </style>
 
     <style name="Divider_HorizontalLine_Style">
-        <item name="android:background">@color/divider_secondary_horizontal_color</item>
+        <item name="android:background">@color/divider_horizontal_color</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/divider_width</item>
     </style>
 
-    <style name="Divider_Primary_HorizontalLine_Style">
-        <item name="android:background">@color/divider_horizontal_color</item>
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">@dimen/divider_width</item>
+    <style name="Divider_Vertical_Style">
+        <item name="android:background">@color/divider_vertical_color</item>
+        <item name="android:layout_width">@dimen/divider_vertical_width</item>
+        <item name="android:layout_height">match_parent</item>
     </style>
 
     <style name="Label_View">
