--- a/LetvWallet/res/values-zh-rCN/string_main.xml
+++ b/LetvWallet/res/values-zh-rCN/string_main.xml
@@ -2,4 +2,9 @@
     <string name="main_tab_recommend">推荐</string>
     <string name="main_tab_wallet">钱包</string>
     <string name="main_tab_my">我的</string>
+
+    <string name="main_recommend_input_error">格式错误</string>
+    <string name="main_recommend_error_no_network">无网络，请检查你的网络!</string>
+    <string name="main_recommend_error_network">服务器连接异常，请稍后重试!</string>
+    <string name="main_recommend_no_data">暂无内容</string>
 </resources>
