--- a/LetvWallet/res/values/string_main.xml
+++ b/LetvWallet/res/values/string_main.xml
@@ -2,4 +2,9 @@
     <string name="main_tab_recommend">recommended</string>
     <string name="main_tab_wallet">wallet</string>
     <string name="main_tab_my">mine</string>
+
+    <string name="main_recommend_input_error">Please enter a valid word</string>
+    <string name="main_recommend_error_no_network">No network connection. Please check your network settings.</string>
+    <string name="main_recommend_error_network">Server connection error. Please try again later.</string>
+    <string name="main_recommend_no_data">No content</string>
 </resources>
