--- a/LetvWallet/res/values/styles.xml
+++ b/LetvWallet/res/values/styles.xml
@@ -276,4 +276,26 @@
         <item name="android:textSize">14sp</item>
     </style>
 
+    <!-- Recommend Card start -->
+    <style name="Recommend_Card_Title">
+        <item name="android:textColor">#262626</item>
+        <item name="android:textSize">16dp</item>
+    </style>
+
+    <style name="Recommend_Card_SubTitle">
+        <item name="android:textColor">#808080</item>
+        <item name="android:textSize">14dp</item>
+    </style>
+
+    <style name="Recommend_Card_EditText" parent="Recommend_Card_Title">
+        <item name="android:textColorHint">#B3B3B3</item>
+    </style>
+
+    <style name="Recommend_Card_Footer">
+        <item name="android:textColor">#808080</item>
+        <item name="android:textSize">12dp</item>
+        <item name="android:lines">1</item>
+    </style>
+    <!-- Recommend Card end -->
+
 </resources>
