--- a/LetvWalletCommon/res/values/colors.xml
+++ b/LetvWalletCommon/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="wallet_statusbar_color">#447DE9</color>
     <color name="wallet_statusbar_white_color">#F6F6F7</color>
     <color name="divider_horizontal_color">#DFDFDF</color>
-    <color name="divider_secondary_horizontal_color">#DFDFDF</color>
+    <color name="divider_vertical_color">#D9D9D9</color>
     <color name="wallet_windowBackground_color">#EEEEF0</color>
     <color name="wallet_actionMenuTextColor_color">@android:color/white</color>
     <color name="wallet_leStatusBarIconColor_color">@android:color/black</color>
